tests/NormalTests/paczka1/small_fuzzy/13181349.err
Error in line 6: t7I6O S935 73,43
Error in line 10: hfd A441 -1,2
Error in line 1: hfd A441 79,8
Error in line 2: S935 S935 3,1
Error in line 16: mKyM8d A334 96,70
